# agents

./: README.md  config.py  llm_services.py  main_bot.py  pyproject.toml  rag_server.py
agents/: __init__.py  base_agent.py  decision_maker_agent.py  detail_collector_agent.py  detail_collector_prompts.py  faq_agent.py  identification_agents.py  information_collector_agent.py  router_agent.py
agents/prompts/: decision_maker_prompts.py  detail_collector_prompts.py  identification_prompts.py
scenarios/: base_scenario.py  courier_complaint_scenario.py  faq_general_scenario.py
tools/: courier_api.py  decision_actions.py  rag_client.py  tool_definitions.py  warehouse_api.py
